# cookbook

./: .gitignore  LICENSE.txt  MANIFEST.in  Pipfile  README.md  config.json.example  cookbook.py  derivation.nix  flake.nix  formatting.py  main.py  pyproject.toml  searchparser.py  setup.py  shell.nix
cookbook/: __main__.py  common.py  cookbook.py  formatting.py  localization.py  main.py  searchparser.py
cookbook/Templates/: base.jinja2  header.jinja2  index.jinja2  listing.jinja2  recipe.jinja2
cookbook/cookbook/: cookbook.py  errors.py  recipev1.py  recipev2.py
cookbook/localization/: de.yml  en.yml
cookbook/static/: common.css  header.css  index.css  recipe.css  search.css  style.css
localization/: de.yml  en.yml
static/: style.css
templates/: base.jinja2  header.jinja2  index.jinja2  listing.jinja2  recipe.jinja2
